# starlight-physics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  init.py  peach.toolchain.cmake
src/: Macros.h  StarlightStatusCodes.h  World.c  World.h  test.c
src/Broadphase/: BvhTree.c  BvhTree.h
src/Dynamics/: RigidBody.h
src/Math/: AABB.h
src/Narrowphase/: GJK.c  GJK.h
src/Types/: Array.h  AtomicQueue.h  BucketHashMap.h  DynamicArena.h  DynamicList.h  FlatHashMap.h  LinkedList.h  RingBuffer.h  StarlightString.h  StaticArena.h  ThreadPool.h
src/Utils/: Logger.h  Macros.h  MemoryAllocator.h  RefCounted.h
tests/: FileIO.h  Graphics.h  Input.h  Renderer.h  ShaderProgram.h  Texture.h  Window.h  main.c
tests/shaders/: depth_vertex.vs  scene_fragment.fs  scene_vertex.vs  skybox_fragment.fs  skybox_vertex.vs
